# THI_CourseProject

./: CMakeLists.txt  forecastchartwindow.cpp  forecastchartwindow.h  location.cpp  location.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  weatherapi.cpp  weatherapi.h
.qtcreator/: CMakeLists.txt.user.039ce13
tests/: CMakeLists.txt  test_invalidjson.cpp  test_parseforecast.cpp  test_weatheremoji.cpp
